# Orchestra

./: .gitignore  README.md  pyproject.toml
docs/: adr-001-model-access.md  adr-002-runtime-language.md  adr-003-agent-handoff-protocol.md  adr-004-model-client-contract.md  adr-005-run-state-and-transcripts.md  adr-006-prompt-assembly.md  adr-007-repository-structure-and-first-vertical-slice.md  adr-008-structured-output-strategy.md  adr-009-engine-loop-sequence.md  config-format.md  implementation-plan-v1.md
examples/investment_team/: team.yaml
examples/investment_team/agents/: elon.md  george.md  klaus.md  warren.md
src/orchestra/: __init__.py  cli.py  config.py  demo_client.py  engine.py  errors.py  litellm_client.py  model_client.py  prompt_builder.py  schemas.py  transcript_store.py
tests/: fakes.py
tests/fixtures/investment_team/: team.yaml
tests/fixtures/investment_team/agents/: george.md  warren.md
tests/integration/: test_engine_with_fake_model.py  test_litellm_integration.py
tests/unit/: test_cli.py  test_config.py  test_energy.py  test_handoff_validation.py  test_litellm_client.py  test_prompt_builder.py  test_transcript_store.py
