[project]
name = "orchestra-agent"
version = "0.1.0"
description = "A turn-based multi-agent orchestration engine."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pyyaml",
    "typer",
    "rich",
    "litellm",
]

[project.scripts]
orchestra = "orchestra.cli:app"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestra"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
